# roberto-firmware

./: .gitignore  CMakeLists.txt  README.rst  partitions.csv  sdkconfig
main/: CMakeLists.txt  Kconfig
main/src/: MainView.cpp  MainView.hpp  ProgramModes.hpp  displayTest.cpp  displayTest.hpp  lvglTest.cpp  lvglTest.hpp  pinFromInt.hpp  roberto.cpp  smartscreen.cpp  waitForDebugger.hpp
www/: index.html
